Adjusted NotificationSchedulerTest